--- a/planeograph/index.html
+++ b/planeograph/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="PlaneographApp" ng-init="getData()">
+<html lang="en" ng-app="PlaneographApp">
 <head>
 	<meta charset="UTF-8">
 	<title>Planeograph</title>
